fixing flex and spacing

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 html {
   box-sizing: border-box;
   font-family: sans-serif;
+  line-height: 1.5;
 }
 *, *::before, *::after {
   box-sizing: inherit;
@@ -8,6 +9,7 @@ html {
 
 header {
   background-color: #e2e2e2;
+  display: flex;
 }
 
 nav {
@@ -15,17 +17,28 @@ nav {
 }
 
 body {
-  margin: .5rem;
+  margin: 0;
   background-color: #fff;
+}
+
+header img {
+  display: flex;
+  align-self: auto;
 }
 
 img {
   width: 2rem;
 }
 
+header ul li a {
+  text-decoration: none;
+  padding: 0 .5rem;
+}
+
 nav ul {
+  list-style-type: none;
   display: flex;
-  padding: .6em;
+  padding: 0;
   color: #0074d9;
   font-size: 1.125rem;
 }
@@ -35,7 +48,7 @@ nav a {
   font-size: 1.125rem;
 }
 
-header img {
+header h1 {
   display: flex;
 }
 
